Tue May 27 23:50:07 2014  Tanaka Akira  <akr@fsij.org>

	* lib/cgi/core.rb: Use Tempfile#close(true) instead of Tempfile#unlink
	  to close file descriptors.

Tue May 27 23:06:46 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_number_literal_suffix): refine error message for
	  extra dot and digits.

Tue May 27 22:44:20 2014  Tanaka Akira  <akr@fsij.org>

	* test/rexml: Avoid fd leaks.

Tue May 27 22:24:25 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Indent.

Tue May 27 22:15:29 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Wrap by REXMLTests module.

Tue May 27 22:11:10 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_encoding_2.rb: Remove a needless file.

Tue May 27 22:10:30 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_contrib.rb: Indent.

Tue May 27 21:28:16 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/ifaddr.c (ifaddr_inspect_flags): support IFF_SIMPLEX.

Tue May 27 21:03:03 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: Use REXMLTests as wrapping module for REXML tests.
	  I avoid using the same module for library in test because
	  it provides "include REXML" environment in test. Normally,
	  users don't use REXML on "include REXML" environment. So I
	  don't want to write tests on "include REXML" environment.

Tue May 27 20:59:37 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_comment.rb: Remove needless REXML module wrapping.

Tue May 27 20:56:49 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/openssl/test_pkcs7.rb: Fix inverted expected and actual values.

Tue May 27 20:26:06 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): some opened fds are
	  remain before GC, so unlink the tempfile is failed.

Tue May 27 19:07:26 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_autoclose_p): Don't raise on frozen IO.

	* test/lib/minitest/unit.rb: IO#autoclose? may raise IOError.
