@@ -1,3 +1,8 @@
+Wed May 28 00:06:18 2014  Tanaka Akira  <akr@fsij.org>
+
+	* lib/net/ftp.rb (transfercmd): Close TCP server socket even if an
+	  exception occur.
+
 Tue May 27 23:50:07 2014  Tanaka Akira  <akr@fsij.org>
 
 	* lib/cgi/core.rb: Use Tempfile#close(true) instead of Tempfile#unlink
